--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "homey-zigbeedriver": "^2.2.15",
-    "zigbee-clusters": "^2.0.0"
+    "zigbee-clusters": "~2.7.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.39.3"
   }
 }
